--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,3 +17,5 @@
     </form>
     <a class="waves-effect waves-light btn col s10 offset-s1 m4 offset-m4" (click)="login()">LOGIN</a>
 </div>
+
+<h5> {{ Login | json }} </h5>
