--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,12 +5,12 @@
         </div>
         <div class="input-field col s12 m4 offset-m4">
             <i class="material-icons prefix">account_circle</i>
-            <input id="email" name="Email" type="email" [(ngModel)]="Login.Email" required class="validate">
+            <input id="email" name="Email" type="email" [(ngModel)]="Login.email" required class="validate">
             <label for="email" data-error="Please Input Valid E-mail">E-mail</label>
         </div>
         <div class="input-field col s12 m4 offset-m4">
             <i class="material-icons prefix">lock</i>
-            <input id="password" name="Password" type="password" [(ngModel)]="Login.Password" required class="validate" pattern="\d{5}">
+            <input id="password" name="Password" type="password" [(ngModel)]="Login.password" required class="validate" pattern="\d{5}">
             <!--minlength="5"-->
             <label for="password" data-error="Please Input Valid Password">Password</label>
         </div>
