--- a/src/app/sass/sass.component.html
+++ b/src/app/sass/sass.component.html
@@ -5,8 +5,9 @@
         <a routerLink="/home" class="brand-logo center">PROJECT</a>
         <ul class="left hide-on-med-and-down">
             <li><a (click)="onLogOut()"><i class="material-icons left">send</i>{{log}}</a></li>
-            <li><a routerLink="/home"><i class="material-icons left">home</i>Home</a></li>
-            <li><a routerLink="/support/companylist"><i class="material-icons left">supervisor_account</i>Support</a></li>
+            <li><a routerLink="/home"><i class="material-icons left">home</i>{{'home' | translate}}</a></li>
+            <li><a routerLink="/support/companylist"><i class="material-icons left">supervisor_account</i>{{'Support' | translate }}</a></li>
+            <li><a class="btn" (click)="onChangeLang();">{{currentLang}}</a></li>
         </ul>
         <ul class="side-nav light-blue accent-4" id="mobile-demo">
             <li><a class="white-text" routerLink="/login"><i class="material-icons left">send</i>Log In</a></li>
