--- a/src/app/company-list/company-list.component.html
+++ b/src/app/company-list/company-list.component.html
@@ -14,10 +14,10 @@
         <table class="highlight table-responsive">
             <thead>
                 <tr>
-                    <th>Edit</th>
-                    <th>Code</th>
-                    <th>Name</th>
-                    <th>delete</th>
+                    <th>{{'companylist.edit' | translate}}</th>
+                    <th>{{'companylist.code' | translate}}</th>
+                    <th>{{'companylist.name' | translate}}</th>
+                    <th>{{'companylist.delete' | translate}}</th>
                 </tr>
             </thead>
 
