--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -4,7 +4,7 @@
             <div class="input-field col s12">
                 <i class="material-icons prefix">vpn_key</i>
                 <input id="code" name="code" type="text" [(ngModel)]="Comp.code" required class="validate" pattern="\d{3}">
-                <label for="code" data-error="Please Input Valid Code">Code</label>
+                <label for="code" data-error="Please Input Valid Code">{{'companylist.code' | translate}}</label>
             </div>
         </div>
         <div class="row">
@@ -12,16 +12,16 @@
                 <i class="material-icons prefix">account_circle</i>
                 <input id="name" name="name" type="text" [(ngModel)]="Comp.name" required class="validate">
                 <!--minlength="5"-->
-                <label for="name" data-error="Please Input Valid Name">Name</label>
+                <label for="name" data-error="Please Input Valid Name">{{'companylist.name' | translate}}</label>
             </div>
         </div>
     </form>
     <form class="col s12">
         <div class="row">
 
-            <a class="waves-effect waves-light btn green" (click)="onSubmit()">Submit</a>
+            <a class="waves-effect waves-light btn green" (click)="onSubmit()">{{'companylist.company.submit' | translate}}</a>
 
-            <a class="waves-effect waves-light btn red" routerLink='/support/companylist'>Back</a>
+            <a class="waves-effect waves-light btn red" routerLink='/support/companylist'>{{'companylist.company.back' | translate}}</a>
 
         </div>
     </form>
