--- a/src/app/company-list/company-list.component.html
+++ b/src/app/company-list/company-list.component.html
@@ -4,7 +4,7 @@
             <div class="input-field">
                 <input id="search" type="search" name="search" [(ngModel)]="searchBox.name" required>
                 <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                <i class="material-icons" (click)="search()">close</i>
+                <i class="material-icons" (click)="search()">find_in_page</i>
             </div>
         </form>
     </div>
