--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -5,9 +5,9 @@
         <a routerLink="/support" class="brand-logo center">{{'sass.Support.support' | translate}}</a>
         <ul class="left hide-on-med-and-down">
             <li><a routerLink="/support/companylist">{{'sass.Support.company' | translate }}</a></li>
-            <li><a routerLink="/support/customer">{{'sass.Support.customer' | translate }}</a></li>
-            <li><a routerLink="/support/user">{{'sass.Support.user' | translate }}</a></li>
-            <li><a routerLink="/support/issue">{{'sass.Support.issue' | translate }}</a></li>
+            <li><a routerLink="/support/customerlist">{{'sass.Support.customer' | translate }}</a></li>
+            <li><a routerLink="/support/userlist">{{'sass.Support.user' | translate }}</a></li>
+            <li><a routerLink="/support/issuelist">{{'sass.Support.issue' | translate }}</a></li>
             <!--<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Support<i class="material-icons right">arrow_drop_down</i></a></li>-->
         </ul>
         <ul class="right hide-on-med-and-down">
@@ -17,9 +17,9 @@
         <ul class="side-nav" id="mobile-demo">
             <li><a routerLink="/home"><i class="material-icons left">home</i>Home</a></li>
             <li><a routerLink="/support/companylist">Company</a></li>
-            <li><a routerLink="/support/customer">Customer</a></li>
-            <li><a routerLink="/support/user">User</a></li>
-            <li><a routerLink="/support/issue">Issue</a></li>
+            <li><a routerLink="/support/customerlist">Customer</a></li>
+            <li><a routerLink="/support/userlist">User</a></li>
+            <li><a routerLink="/support/issuelist">Issue</a></li>
             <li><a class="btn" (click)="onChangeLang();">{{currentLang}}</a></li>
             <!--<li><a routerLink="/sass"><i class="material-icons left">home</i>Home</a></li>
                     <li><a routerLink="/badges"><i class="material-icons left">assignment</i>Badges</a></li>
