--- a/src/app/customer-list/customer-list.component.html
+++ b/src/app/customer-list/customer-list.component.html
@@ -1,40 +1,52 @@
-<nav>
-    <div class="nav-wrapper">
-        <form>
-            <div class="input-field">
-                <input id="search" type="search" name="search" [(ngModel)]="searchBox.name" required>
-                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                <i class="material-icons" (click)="search()">close</i>
-            </div>
-        </form>
-    </div>
-</nav>
-<div class="row">
-    <form class="col s12">
-        <table class="highlight table-responsive">
-            <thead>
-                <tr>
-                    <th>{{'companylist.edit' | translate}}</th>
-                    <th>{{'companylist.code' | translate}}</th>
-                    <th>{{'companylist.name' | translate}}</th>
-                    <th>{{'companylist.delete' | translate}}</th>
-                </tr>
-            </thead>
-
-            <tbody>
-                <tr *ngFor="let data of Comp">
-                    <td><a class="btn-floating btn waves-effect waves-light " (click)="onEditClick(data._id)"><i class="material-icons ">mode_edit</i></a></td>
-                    <td>{{data.code}}</td>
-                    <td>{{data.name}}</td>
-                    <td><a class="btn-floating btn red waves-effect waves-light " (click)="onDeleteClick(data._id) "><i class="material-icons ">delete</i></a></td>
-                </tr>
-            </tbody>
-        </table>
+<nav class="">
+  <div class="nav-wrapper">
+    <form>
+      <div class="input-field">
+        <input name="search" id="search" type="search" required [(ngModel)]="searchText">
+        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+        <i class="material-icons" (click)="search()">find_in_page</i>
+      </div>
     </form>
-</div>
+  </div>
+</nav>
+<table>
+  <thead>
+    <tr>
+      <th>{{'customer.edit' | translate}}</th>
+      <th>{{'customer.code' | translate}}</th>
+      <th>{{'customer.name' | translate}}</th>
+      <th>{{'companylist.name' | translate}}</th>
+      <th>{{'customer.delete' | translate}}</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let cust of customerData; let i = index;">
+      <td>
+        <a class="btn-floating btn waves-effect waves-light blue darken-3" (click)="onEditButtonClick(cust._id);">
+          <i class="material-icons">edit</i>
+        </a>
+      </td>
+      <td>{{cust.custCode}}</td>
+      <td>{{cust.custName}}</td>
+      <td>{{cust.compCode}}</td>
+      <td>
+        <a class="btn-floating btn waves-effect waves-light red darken-3" (click)="onDeleteButtonClick(cust._id);">
+          <i class="material-icons">delete</i>
+        </a>
+      </td>
+    </tr>
+  </tbody>
+</table>
 <ul class="pagination">
-    <li *ngFor="let p of paging; let i = index;" [ngClass]="{'active': i == searchBox.numPage}"><a (click)="gotoPage(i);">{{p}}</a></li>
+  <li class="waves-effect" 
+  *ngFor="let p of paging; let i = index;" 
+  [ngClass]="{'active' : i == numPage }" 
+  (click)="gotoPage(i);">
+    <a>{{p}}</a>
+  </li>
 </ul>
-<div class="fixed-action-btn ">
-    <a class="btn-floating btn-large btn waves-effect waves-light red " (click)="onAddClick() "><i class="material-icons ">add</i></a>
+<div class="fixed-action-btn">
+  <a class="btn-floating btn-large red" (click)="onAddButtonClick()">
+      <i class="large material-icons">add</i>
+    </a>
 </div>
