--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,3 +1,27 @@
-<p>
-  user-list works!
-</p>
+<div class="row">
+  <div class="col s12 m4" *ngFor="let item of userData">
+    <div class="card">
+      <div class="card-image">
+        <img [src]="imgUrl+item._id">
+        <a class="btn-floating halfway-fab waves-effect waves-light blue" (click)="onEditClick(item._id)">
+          <i class="material-icons">edit</i>
+        </a>
+      </div>
+      <div class="card-content">
+        <span class="card-title">{{item.firstName}} {{item.lastName}}</span>
+        <p>{{item.mobile}}</p>
+        <p>{{item.email}}</p>
+      </div>
+      <div class="card-action">
+        <a (click)="onDeleteClick(item._id)">
+          <i class="material-icons left">delete</i>Remove
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="fixed-action-btn">
+  <a class="btn-floating btn-large red" (click)="onAddButtonClick()">
+        <i class="large material-icons">add</i>
+      </a>
+</div>
