--- a/src/app/issue/issue.component.html
+++ b/src/app/issue/issue.component.html
@@ -1,3 +1,79 @@
-<p>
-  issue works!
-</p>
+<div class="row log-in-box ">
+
+  <div class="row">
+    <div class="input-field col  s15  m4 l4 ">
+      <input id="IssueCode" [(ngModel)]="issueCode" [readonly]="mode === 'EDIT'" type="text" class="validate grey-text text-darken-1"
+        placeholder="Please input issue code">
+      <label for="issueCode">Issue Code</label>
+    </div>
+  </div>
+
+  <div class="row">
+    <select [(ngModel)]="compCode" materialize="material_select" [materializeSelectOptions]="companyData"> 
+            <option value="" disabled selected>Choose your option</option>
+            <option *ngFor="let comp of companyData;" 
+              [value]="comp.code">{{comp.name}}</option>
+          </select>
+  </div>
+
+  <div class="row">
+    <select [(ngModel)]="customerCode" materialize="material_select" [materializeSelectOptions]="customerData"> 
+            <option value="" disabled selected>Choose your option</option>
+            <option *ngFor="let cus of customerData;" 
+              [value]="cus.custCode">{{cus.custName}}</option>
+          </select>
+  </div>
+
+  <div class="row log-in-box">
+    <form action="#">
+
+      <label class="grey-text text-darken-1">Status :  </label>
+
+      <input name="group1" type="radio" [(ngModel)]="radio.group" value="inProcess" id="inProcess" />
+      <label for="inProcess">In Process</label>
+
+      <input name="group1" type="radio" [(ngModel)]="radio.group" value="complete" id="complete" />
+      <label for="complete">Complete</label>
+
+      <input name="group1" type="radio" [(ngModel)]="radio.group" value="delete" id="delete" />
+      <label for="delete">Delete</label>
+
+    </form>
+  </div>
+
+
+  <div class="row">
+    <form class=" col s12  m10 l8">
+      <div class="row">
+        <div class="input-field col s12">
+          <textarea id="Issuedetail" class="materialize-textarea grey-text text-darken-1" type="textarea">{{issueDetail}}</textarea>
+          <label for="issueDetail">Issue Detail</label>
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <div class="row">
+    <div class="col s6  m5 l4 grey-text text-darken-1">
+      <input id="issueDate" type="text" [(ngModel)]="issueDate" class="datepicker" materialize="pickadate" [materializeParams]="[{closeOnSelect: true, format: 'dd/mm/yyyy'}]"
+      />
+    </div>
+  </div>
+  <div class="row">
+    <form>
+      <div class="file-field input-field">
+        <div class="btn">
+          <span>{{'user.picture' | translate}}</span>
+          <input type="file" name="avatar" (change)="fileChangeEvent($event); readUrl($event)">
+        </div>
+        <div class="file-path-wrapper">
+          <input class="file-path validate" type="text">
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <br>
+  <a class="waves-effect waves-light btn col col s12  m10 l8 teal darken-4" (click)="onSave();">save</a>
+
+</div>
