--- a/src/app/issueattach/issueattach.component.html
+++ b/src/app/issueattach/issueattach.component.html
@@ -4,26 +4,31 @@
     <div class="file-field input-field">
       <div class="btn">
         <span>File</span>
-        <input type="file">
+        <input type="file" name="attach" (change)="fileChangeEvent($event);" />
       </div>
       <div class="file-path-wrapper">
         <input class="file-path validate" type="text">
       </div>
     </div>
   </form>
-  
+
   <div class="row">
-    <a class="col s12 waves-effect waves-light btn">Attatch</a>
+    <a class="col s12 waves-effect waves-light btn" (click)="onAttach()">Attatch</a>
   </div>
 
   <ul class="collection with-header">
     <li class="collection-header">
       <h4>Attach File</h4>
     </li>
-    <li class="collection-item" *ngFor="let f of [1,2,3,4,5]">
-      <div>File Name<a href="#!" class="secondary-content">
-      <i class="material-icons">send</i>
-    </a>
+    <li class="collection-item" *ngFor="let f of fileData; let i = index;">
+      <div>
+        <a class="secondary-content" (click)="onDelete(i)">
+          <i class="material-icons">delete</i>
+        </a>
+        {{f}}
+        <a class="secondary-content" (click)="onShowImage(i)">
+          <i class="material-icons">send</i>
+        </a>
       </div>
     </li>
   </ul>
