--- a/src/app/sass/sass.component.html
+++ b/src/app/sass/sass.component.html
@@ -7,6 +7,7 @@
             <li><a (click)="onLogOut()"><i class="material-icons left">send</i>{{log}}</a></li>
             <li><a routerLink="/home"><i class="material-icons left">home</i>{{'sass.home' | translate}}</a></li>
             <li><a routerLink="/support/companylist"><i class="material-icons left">supervisor_account</i>{{'sass.Support.support' | translate }}</a></li>
+            <li><a routerLink="/chat"><i class="material-icons left">supervisor_account</i>CHAT</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
             <li><a class="btn" (click)="onChangeLang();">{{currentLang}}</a></li>
